# locoris

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: site.yml  tauri-android.yml  tauri-desktop-macos.yml  tauri-desktop-release.yml  tauri-desktop-windows.yml
apps/app/: index.html  package.json  vite.config.js  vite.config.ts
apps/app/.cargo/: config.toml
apps/app/scripts/: run-tauri.mjs
apps/app/src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
apps/app/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
apps/app/src-tauri/capabilities/: android.json  default.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: lib.rs  main.rs
apps/app/src-tauri/windows/: installer-hooks.nsh
apps/app/src/components/: AdaptiveAppShell.css  CanvasPane.css  (+44 more)
apps/personal-server/: README.md  package.json  server.mjs
apps/site/: index.html  package.json  vite.config.js  vite.config.ts
apps/site/public/: 404.html  robots.txt  site.webmanifest  sitemap.xml
apps/site/src/: App.css  App.tsx  main.tsx  styles.css  vite-env.d.ts
docs/: planner.md
docs/architecture/: repository-structure.md
docs/design/: visual-style-guide.md
docs/product/: backups-and-export.md  e2ee.md  glossary.md  overview.md  security-terminology.md  storage-compatibility.md  sync.md
docs/setup/: desktop-data-lifecycle.md  desktop-development.md  desktop-release.md  google-drive.md
infra/docker/personal-server/: Dockerfile  compose.example.yml
scripts/: validate-release-metadata.mjs
scripts/macos/: uninstall-locoris.sh
(+107 files in other folders)
